# Raytracer

./: CMakeLists.txt  Makefile
Scene_files/: scene_file.cfg  wrong_file_cam.cfg  wrong_type_of_file
include/: AmbientLighting.hpp  Camera.hpp  DirectionalLight.hpp  ILight.hpp  ILights.hpp  IPrimitives.hpp  Plane.hpp  Ray.hpp  Sphere.hpp  bootstrapMain.hpp  errors.hpp  parser.hpp  point3D.hpp  raytracer.hpp  rectangle3D.hpp  sceneBuilder.hpp  someStructsForTheParser.hpp  vector3D.hpp
src/: AmbientLighting.cpp  Camera.cpp  DirectionalLight.cpp  Plane.cpp  Ray.cpp  Sphere.cpp  boostrapMain.cpp  errors.cpp  main.cpp  parser.cpp  point3D.cpp  raytracer.cpp  rectangle3D.cpp  sceneBuilder.cpp  vector3D.cpp
